--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -3,107 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New TVS Jupiter 110 - Specs & Features</title>
+    <title>New TVS Jupiter 110 | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;"> <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo">
-                <h1>Tirumala <span>TVS</span></h1>
-            </a>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../models.html">Inventory</a></li>
-                    <li><a href="../contacts.html">Contact Us</a></li>
-                </ul>
-            </nav>
+<body>
+
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
-    <div class="product-hero">
-        <h2>New TVS Jupiter 110</h2>
-        <p>Zyada Se Bhi Zyada | India's Most Loved Family Scooter</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/jupiter110.jpg" alt="TVS Jupiter 110" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">The New Standard</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The all-new TVS Jupiter 110 comes with a Next-Gen 113cc engine and first-in-segment <strong>iGO Assist Technology</strong>. 
-                Experience 10% more mileage, instant pickup, and a silent start. It is designed for the comfort of the whole family.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span class="hero-tag" style="background: var(--tvs-blue);">NEW LAUNCH</span>
+            <h1>TVS Jupiter 110</h1>
+            <h3>Zyada Se Bhi Zyada</h3>
+            <p>
+                India's most loved family scooter is back with a bang. Now featuring a Next-Gen 113cc engine and 
+                <strong>iGO Assist Technology</strong> for 10% more mileage and instant overtaking power.
             </p>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/jupiter110.jpg" alt="TVS Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=Jupiter+110'">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-box"><h4>113.3 cc</h4><p>Engine</p></div>
+        <div class="stat-box"><h4>10% +</h4><p>More Mileage</p></div>
+        <div class="stat-box"><h4>9.8 Nm</h4><p>Torque</p></div>
+        <div class="stat-box"><h4>iGO</h4><p>Assist Tech</p></div>
+    </div>
+
+    <section class="info-section">
+        <div class="section-head">
+            <h2>The New Benchmark</h2>
+            <p>Designed for the comfort and convenience of the entire family.</p>
+        </div>
         <div class="features-grid">
             <div class="feature-card">
                 <span class="feature-icon">⚡</span>
-                <h4>iGO Assist Tech</h4>
-                <p>Get extra torque boost for overtaking and better mileage with auto start-stop.</p>
+                <h4>iGO Assist</h4>
+                <p>Micro-hybrid technology provides an extra torque boost for easy overtaking and auto start-stop for fuel savings.</p>
             </div>
             <div class="feature-card">
                 <span class="feature-icon">⛽</span>
-                <h4>Fuel Filling</h4>
-                <p>External front fuel filling. No need to get down from the scooter at petrol pumps.</p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">📱</span>
-                <h4>Smart Connect</h4>
-                <p>Bluetooth connectivity with call/SMS alerts and turn-by-turn navigation.</p>
+                <h4>Smart Refuel</h4>
+                <p>External front fuel filling allows you to refuel without getting off the seat.</p>
             </div>
             <div class="feature-card">
                 <span class="feature-icon">🎒</span>
-                <h4>Large Storage</h4>
-                <p>Best-in-class under-seat storage that can fit two helmets easily.</p>
+                <h4>Double Helmet Space</h4>
+                <p>Best-in-class under-seat storage that can easily fit two helmets.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">📱</span>
+                <h4>SmartXonnect</h4>
+                <p>Bluetooth connected digital cluster with Turn-by-Turn navigation and Call/SMS alerts.</p>
             </div>
         </div>
     </section>
 
-    <section id="specs" class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row">
-                <div class="spec-label">Engine Type</div>
-                <div class="spec-value">Single cylinder, 4 stroke, CVTi, Fuel Injection</div>
-            </div>
-            <div class="spec-row">
-                <div class="spec-label">Displacement</div>
-                <div class="spec-value">113.3 cc</div>
-            </div>
-            <div class="spec-row">
-                <div class="spec-label">Max Power</div>
-                <div class="spec-value">5.9 kW @ 6500 rpm</div>
-            </div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">113.3 cc, Single Cylinder, 4 Stroke</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">5.9 kW @ 6500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">9.8 Nm @ 5000 rpm (with Assist)</div></div>
+            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">105 kg</div></div>
+            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">5.1 Liters</div></div>
+            <div class="spec-row"><div class="spec-key">Brakes</div><div class="spec-val">Disc (Front Option) / Drum (Rear)</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Jupiter" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4>Tirumala TVS</h4>
-                <p>Bidarahalli, Bangalore - 49</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../models.html">All Models</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
-        </div>
-    </footer>
-
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
