--- a/models/raider.html
+++ b/models/raider.html
@@ -3,68 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Raider 125 | The Wicked Ride</title>
+    <title>TVS Raider 125 | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">BEST SELLER</span>
+            <span class="hero-tag" style="background: #d3161c;">BEST SELLER</span>
             <h1>TVS Raider 125</h1>
             <h3>The Wicked Ride</h3>
             <p>
                 India's first 125cc bike with a TFT screen and Voice Assist. 
-                Combining "Wicked" performance with best-in-class mileage and sporty looks.
+                Combining "Wicked" performance with sporty looks and a unique "Animalistic" LED headlamp.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/raider.jpg" alt="TVS Raider 125">
+            <img src="../assets/raider.jpg" alt="TVS Raider" onerror="this.src='https://placehold.co/800x600?text=Raider+125'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>5.9 sec</h4><span>0-60 km/h</span></div>
-        <div class="stat-item"><h4>11.38 PS</h4><span>Max Power</span></div>
-        <div class="stat-item"><h4>TFT</h4><span>Smart Console</span></div>
+        <div class="stat-box"><h4>5.9 s</h4><p>0-60 km/h</p></div>
+        <div class="stat-box"><h4>124.8 cc</h4><p>3-Valve Engine</p></div>
+        <div class="stat-box"><h4>TFT</h4><p>Smart Console</p></div>
+        <div class="stat-box"><h4>11.38 PS</h4><p>Max Power</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Wicked Features</h2>
+    <section class="info-section">
+        <div class="section-head">
+            <h2>Wicked Features</h2>
+            <p>Advanced technology meets aggressive styling.</p>
+        </div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🚀</span><h4>0-60 in 5.9s</h4><p>Fastest acceleration in the segment with 3-valve engine tech.</p></div>
-            <div class="feature-card"><span class="feature-icon">📟</span><h4>TFT Console</h4><p>First-in-class full digital display with voice assist and navigation.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Mono-shock</h4><p>5-step adjustable mono-shock suspension for superior handling.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charging</h4><p>On-the-go mobile charging port near the tank.</p></div>
+            <div class="feature-card"><span class="feature-icon">🚀</span><h4>Best Acceleration</h4><p>Fastest in segment acceleration 0-60 km/h in just 5.9 seconds.</p></div>
+            <div class="feature-card"><span class="feature-icon">📟</span><h4>TFT Display</h4><p>5-inch TFT console with Voice Assist, Navigation, and Gear Shift Indicator.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Mono-Shock</h4><p>Gas-charged 5-step adjustable mono-shock suspension for superior handling.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charging</h4><p>Convenient on-the-go mobile charging port located near the tank.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">11.38 PS</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">10 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">123 kg</div></div>
-            <div class="spec-box"><span class="spec-icon">🕹</span><div class="spec-label">Gears</div><div class="spec-value">5 Speed</div></div>
-            <div class="spec-box"><span class="spec-icon">💡</span><div class="spec-label">Lights</div><div class="spec-value">Animalistic LED</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, Air & Oil Cooled, 3V</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">11.38 PS @ 7500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">11.2 Nm @ 6000 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Transmission</div><div class="spec-val">5 Speed Manual</div></div>
+            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">123 kg</div></div>
+            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">10 Liters</div></div>
         </div>
     </section>
 
-    <footer>
-        <div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div>
-    </footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
