--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -3,66 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Ntorq 125 | Play Smart</title>
+    <title>TVS Ntorq 125 | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">SPORTY</span>
+            <span class="hero-tag" style="background: #ffcc00; color: #333;">GEN Z CHOICE</span>
             <h1>TVS Ntorq 125</h1>
-            <h3>Racing DNA Unleashed</h3>
+            <h3>Play Smart. Ride Hard.</h3>
             <p>
-                India's first Bluetooth connected scooter. 
-                With Stealth Aircraft inspired design and a powerful 3-valve engine, it's built for Gen-Z.
+                India's first Bluetooth connected scooter. Built for the youth with Stealth Aircraft inspired design, 
+                a powerful 3-valve engine, and a signature sporty exhaust note.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/ntorq.jpg" alt="TVS Ntorq 125">
+            <img src="../assets/ntorq.jpg" alt="TVS Ntorq" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>9.38 PS</h4><span>Power</span></div>
-        <div class="stat-item"><h4>95 km/h</h4><span>Top Speed</span></div>
-        <div class="stat-item"><h4>Bluetooth</h4><span>Connected</span></div>
+        <div class="stat-box"><h4>125 cc</h4><p>3-Valve Engine</p></div>
+        <div class="stat-box"><h4>9.38 PS</h4><p>Max Power</p></div>
+        <div class="stat-box"><h4>95 km/h</h4><p>Top Speed</p></div>
+        <div class="stat-box"><h4>Smart</h4><p>Connected</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Key Highlights</h2>
+    <section class="info-section">
+        <div class="section-head"><h2>Racing DNA Features</h2></div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🎮</span><h4>Gaming Console</h4><p>Speedometer with lap timer, top speed recorder, and more.</p></div>
-            <div class="feature-card"><span class="feature-icon">💨</span><h4>3-Valve Engine</h4><p>Superior pickup and power with race-tuned engine.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔊</span><h4>Sporty Exhaust</h4><p>Signature exhaust note that sounds like a sportbike.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill</h4><p>First in segment engine kill switch for convenience.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎮</span><h4>Gaming Console</h4><p>First scooter with a console that tracks Lap Times, Top Speed, and 0-60 timing.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔊</span><h4>Sporty Sound</h4><p>Unique exhaust note that sounds like a sportbike, not a scooter.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill Switch</h4><p>First-in-segment Engine Kill Switch for traffic convenience.</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>Bluetooth</h4><p>Caller ID, SMS alerts, and Last Parked Location assist.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">9.38 PS</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5.8 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">118 kg</div></div>
-            <div class="spec-box"><span class="spec-icon">🍩</span><div class="spec-label">Tyres</div><div class="spec-value">Tubeless Alloy</div></div>
-            <div class="spec-box"><span class="spec-icon">💡</span><div class="spec-label">Headlamp</div><div class="spec-value">LED</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, 3 Valve, CVTi-REVV</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">9.38 PS @ 7000 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">10.5 Nm @ 5500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Tyres</div><div class="spec-val">12-inch Tubeless Alloy Wheels</div></div>
+            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">5.8 Liters (External Fill)</div></div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
