--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -3,65 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Jupiter 125 | Grand</title>
+    <title>TVS Jupiter 125 | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: var(--tvs-blue); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">FAMILY</span>
+            <span class="hero-tag" style="background: var(--tvs-blue);">PREMIUM SCOOTER</span>
             <h1>TVS Jupiter 125</h1>
             <h3>Zyada Se Bhi Zyada</h3>
             <p>
-                A perfect upgrade. The Jupiter 125 offers the largest under-seat storage in the segment (fits 2 helmets), 
-                superior mileage, and grand styling.
+                The ultimate upgrade. Offering the largest under-seat storage in the industry (fits 2 helmets), 
+                progressive styling, and superior comfort with the longest seat in the segment.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/jupiter125.jpg" alt="TVS Jupiter 125">
+            <img src="../assets/jupiter125.jpg" alt="TVS Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=Jupiter+125'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>33 L</h4><span>Storage</span></div>
-        <div class="stat-item"><h4>6.0 kW</h4><span>Power</span></div>
-        <div class="stat-item"><h4>Metal</h4><span>Body</span></div>
+        <div class="stat-box"><h4>33 L</h4><p>Huge Storage</p></div>
+        <div class="stat-box"><h4>125 cc</h4><p>Engine</p></div>
+        <div class="stat-box"><h4>Metal</h4><p>Body</p></div>
+        <div class="stat-box"><h4>6.0 kW</h4><p>Power</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Grand Features</h2>
+    <section class="info-section">
+        <div class="section-head"><h2>Grand Features</h2></div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🪖</span><h4>2 Helmet Storage</h4><p>Largest 33L under-seat storage in the industry.</p></div>
-            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Fuel tank moved to floorboard for better balance.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛋</span><h4>Longest Seat</h4><p>Longest seat in segment for maximum comfort.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Metal Body</h4><p>Robust metal build for durability and safety.</p></div>
+            <div class="feature-card"><span class="feature-icon">🪖</span><h4>2 Helmet Storage</h4><p>Innovative chassis design creates a massive 33L space under the seat.</p></div>
+            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Fuel tank is moved to the floorboard for better balance and ease of filling.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛋</span><h4>Longest Seat</h4><p>790mm long seat ensures maximum comfort for rider and pillion.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Metal Body</h4><p>Strong metal body for durability and a premium feel.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">6.0 kW</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5.1 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">108 kg</div></div>
-            <div class="spec-box"><span class="spec-icon">🛑</span><div class="spec-label">Brakes</div><div class="spec-value">Disc Option</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, Single Cylinder, 3 Valve</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">6.0 kW @ 6500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">10.5 Nm @ 4500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Suspension</div><div class="spec-val">Gas Charged Rear Shock (Adjustable)</div></div>
+            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">5.1 Liters</div></div>
+            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">108 kg</div></div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
