--- a/models/xl100.html
+++ b/models/xl100.html
@@ -3,64 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS XL100 | Heavy Duty</title>
+    <title>TVS XL100 | Tirumala TVS</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: var(--tvs-blue); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">UTILITY</span>
+            <span class="hero-tag" style="background: #555;">HEAVY DUTY</span>
             <h1>TVS XL100</h1>
-            <h3>Heavy Duty King</h3>
+            <h3>The Multi-Utility King</h3>
             <p>
-                The most reliable business partner. With i-Touch Start and 15% more mileage, 
-                the XL100 is built for heavy loads and rough roads.
+                The most reliable partner for your business. Built tough with a payload capacity of 130kg 
+                and featuring i-Touch Start for silent, instant ignition.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/xl100.jpg" alt="TVS XL100">
+            <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=XL100'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>99.7 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>130 kg</h4><span>Payload</span></div>
-        <div class="stat-item"><h4>i-Touch</h4><span>Silent Start</span></div>
-        <div class="stat-item"><h4>15% +</h4><span>Mileage</span></div>
+        <div class="stat-box"><h4>99.7 cc</h4><p>Engine</p></div>
+        <div class="stat-box"><h4>130 kg</h4><p>Payload</p></div>
+        <div class="stat-box"><h4>Silent</h4><p>Start</p></div>
+        <div class="stat-box"><h4>15% +</h4><p>Mileage</p></div>
     </div>
 
-    <section>
-        <h2 class="section-title">Built Tough</h2>
+    <section class="info-section">
+        <div class="section-head"><h2>Built for Business</h2></div>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">👆</span><h4>i-Touch Start</h4><p>Silent and instant start button.</p></div>
-            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Robust chassis with 130 kg payload capacity.</p></div>
-            <div class="feature-card"><span class="feature-icon">🧼</span><h4>Easy Clean</h4><p>Detachable rear seat for carrying goods.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔌</span><h4>Mobile Charging</h4><p>Charge your phone while you work.</p></div>
+            <div class="feature-card"><span class="feature-icon">👆</span><h4>i-Touch Start</h4><p>Integrated starter generator for a silent and instant start.</p></div>
+            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Robust chassis designed to carry heavy loads effortlessly.</p></div>
+            <div class="feature-card"><span class="feature-icon">🧼</span><h4>Easy Clean</h4><p>Detachable rear seat makes it easy to load goods and clean.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔌</span><h4>Mobile Charging</h4><p>Charge your mobile phone on the go while you work.</p></div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">99.7 cc</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">4.4 PS</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">4 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">89 kg</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head"><h2>Technical Specifications</h2></div>
+        <div class="specs-container">
+            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">99.7 cc, 4 Stroke</div></div>
+            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">4.4 PS @ 6000 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">6.5 Nm @ 3500 rpm</div></div>
+            <div class="spec-row"><div class="spec-key">Starting</div><div class="spec-val">Kick & Electric Start</div></div>
+            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">89 kg</div></div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
 </body>
 </html>
